# FRAVEL

./: .env.example  .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: crew.py  events_agent.py  itinerary_agent.py  restaurant_agent.py  transport_agent.py  weather_agent.py
backend/app/mcp/: events_server.py  restaurant_server.py  transport_server.py  weather_server.py
backend/app/models/: __init__.py  event.py  itinerary.py  restaurant.py  transport.py  trip.py  weather.py
backend/app/routes/: auth.py  sse.py  trips.py
backend/app/services/: planner.py  supabase_client.py
backend/app/tools/: events_tool.py  restaurant_tool.py  transport_tool.py  weather_tool.py
backend/tests/: test_models.py
backend/tests/test_agents/: test_crew.py
backend/tests/test_routes/: test_trips.py
backend/tests/test_tools/: test_events_tool.py  test_restaurant_tool.py  test_transport_tool.py  test_weather_tool.py
docs/superpowers/plans/: 2026-03-18-fravel-travel-assistant.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/agents/: AgentProgressRing.tsx  AgentStatusPanel.tsx
frontend/src/components/itinerary/: ActivityCard.tsx  DayColumn.tsx  (+6 more)
frontend/src/hooks/: useAgentStatus.ts  useAuth.ts  useTheme.ts
frontend/src/lib/: api.ts  sse.ts
frontend/src/pages/: Auth.tsx  History.tsx  Itinerary.tsx  Landing.tsx  Plan.tsx  Traces.tsx
frontend/src/store/: tripStore.ts
frontend/src/types/: index.ts
supabase/migrations/: 001_initial_schema.sql
(+14 files in other folders)
